--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ body{
 }
 
 section{    
-    height: 100vh;
+    width: 100vw;
 }
 
 .test{
